--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -102,9 +102,33 @@
 
                 <tr> 
                     <td> Admissions </td> 
-                    <td> Bac général +++, bac technologique ++, bac professionnel + </td> 
-                    <td> Bac général +++, bac technologique +++, bac professionnel + </td> 
-                    <td> Bac général ++, bac technologique +++, bac professionnel + </td> 
+                    <td> Bac général <div id = "plus" > +++ </div>, bac technologique <div id = "moyen" > ++ </div>, bac professionnel <div id = "peu" > + </div></td> 
+                    <td> Bac général <div id = "plus" > +++ </div>, bac technologique <div id = "moyen" > ++ </div>, bac professionnel <div id = "peu" > + </div></td> 
+                    <td> Bac général <div id = "moyen" > ++ </div>, bac technologique <div id = "plus" > +++ </div>, bac professionnel <div id = "peu" > + </div></td> 
+                </tr>
+
+                <tr> 
+                    <td> Débouchés </td> 
+                    <td> <ul> <li> Concepteur (applications mobiles, web, jeux vidéos etc.) ; </li> 
+                            <li> Développeur web (front-end/back-end) </li> 
+                            <li> Développeur d'applications mobiles </li> 
+                            <li> Techniciens en maintenance </li> 
+                            <li> Analyste programmeur ; </li> 
+                            <li> Administrateur des systèmes, des réseaux ou des bases de données </li> 
+                        </ul></td> 
+                    
+                    <td> <ul> <li> concepteur et développeur d’applications ou de sites </li>
+                            <li> analyste programmeur </li> 
+                            <li> adjoint ou assistant ingénieur </li> 
+                            <li> administrateur de base de données ou de systèmes </li> 
+                            <li> technico-commercial </li> 
+                            <li> technicien de maintenance informatique et bureautique </li> 
+                            <li> chargé de production et d’exploitation de systèmes d’information </li> 
+                            <li> Webmestre </li> 
+                            <li> gestionnaire de parc informatique </li>
+                    </ul> </td> 
+
+                    <td> <ul> <li> </td> 
                 </tr>
 
 
