--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -128,7 +128,9 @@
                             <li> gestionnaire de parc informatique </li>
                     </ul> </td> 
 
-                    <td> <ul> <li> </td> 
+                    <td> <ul> <li> Technicien systèmes et réseaux </li> 
+                    <li> Technicien d'infrastructure </li>
+                    </ul> </td> 
                 </tr>
 
 
