--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -17,11 +17,11 @@
                 <nav>
                     <ul>
                         <li><a href="#">Accueil</a></li>
-                        <li><a href="page2 qu'est ce que le but.html">Qu'est-ce que le BUT ?</a></li>
-                        <li><a href="page3 Temoignages.html">Temoignages</a></li>
-                        <li><a href="page4 A propos de nous.html">A propos de nous</a></li>
-                        <li><a href="page5 Liste des IUT.html">Liste des IUT</a></li>
-                        <li><a href="page6 contact.html">Contact</a></li>
+                        <li><a href="page2_qu'est_ce_que_le_but.html">Qu'est-ce que le BUT ?</a></li>
+                        <li><a href="page3_Temoignages.html">Temoignages</a></li>
+                        <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
+                        <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
+                        <li><a href="page6_contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -53,12 +53,11 @@
                 <div id="footer_texte"> 
                     <ul>
                         <li><a href="#">Accueil</a></li>
-                        <li><a href="page2 qu'est ce que le but.html">Qu'est-ce que le BUT ?</a></li>
-                        <li><a href="page3 Temoignages.html">Temoignages</a></li>
-                        <li><a href="page4 A propos de nous.html">A propos de nous</a></li>
-                        <li><a href="page5 Liste des IUT.html">Liste des IUT</a></li>
-                        <li><a href="page6 contact.html">Contact</a></li>
-                    </ul>
+                        <li><a href="page2_qu'est_ce_que_le_but.html">Qu'est-ce que le BUT ?</a></li>
+                        <li><a href="page3_Temoignages.html">Temoignages</a></li>
+                        <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
+                        <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
+                        <li><a href="page6_contact.html">Contact</a></li>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
                 <div id="footer_images">
