--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -140,12 +140,12 @@
             <footer>
                 <div id="footer_texte"> 
                     <ul>
-                        <li><a href="page1 accueil.html">Accueil</a></li>
+                        <li><a href="page1_accueil.html">Accueil</a></li>
                         <li><a href="#">Qu'est-ce que le BUT ?</a></li>
-                        <li><a href="page3 Temoignages.html">Temoignages</a></li>
-                        <li><a href="page4 A propos de nous.html">A propos de nous</a></li>
-                        <li><a href="page5 Liste des IUT.html">Liste des IUT</a></li>
-                        <li><a href="page6 contact.html">Contact</a></li>
+                        <li><a href="page3_Temoignages.html">Temoignages</a></li>
+                        <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
+                        <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
+                        <li><a href="page6_contact.html">Contact</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
