--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -33,7 +33,7 @@
             </section> 
 
             <section id = "contact" > 
-
+                <p> bnejnbljfgvuertbc,sfj hydgrjgdslgslghsjdhdjhdjgdhjdghjdcw</p>
             </section>
             
             <!-------- Bas de page -------->
