--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -26,15 +26,16 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
-
-            <section id = "texte" > 
-                <h1> Contact </h1> 
-                <p> Si vous avez des questions, vous pouvez nous contacter à l'aide du formulaire ci-contre </p>
-            </section> 
-
-            <section id = "contact" > 
-                <p> bnejnbljfgvuertbc,sfj hydgrjgdslgslghsjdhdjhdjgdhjdghjdcw</p>
-            </section>
+            <h1> Contact </h1>
+            <div id="formulaire">
+                <section id = "texte" >  
+                    <p> Si vous avez des questions, vous pouvez nous contacter à l'aide du formulaire ci-contre </p>
+                </section> 
+    
+                <section id = "contact" > 
+                    <p> bnejnbljfgvuertbc,sfj hydgrjgdslgslghsjdhdjhdjgdhjdghjdcw </p>
+                </section>
+            </div>
             
             <!-------- Bas de page -------->
             <footer>
