--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -25,7 +25,9 @@
                     </ul>
                 </nav>
             </div>
-            <!---- Contenu de la page (à changer en fonction de la page) ---->
+            <!---- Contenu de la page (à changer en fonction de la page) ----> 
+
+            <div id="contenu_page"> 
             
             <h1> Qu'est ce que le BUT ? </h1> 
 
@@ -134,7 +136,9 @@
                 </tr>
 
 
-            </table>
+            </table> 
+
+            </div> 
 
             <!-------- Bas de page -------->
             <footer>
