--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -25,8 +25,27 @@
                     </ul>
                 </nav>
             </div>
-            <!---- Contenu de la page (à changer en fonction de la page) ---->
+            <!---- Contenu de la page (à changer en fonction de la page) ----> 
+
+            <h1> Temoignages </h1> 
             
+            <p> Voici quelques témoignages d'étudiants de différents IUT. Les notes sont notés sur 5. </p> 
+
+            <div id = "personne1" > 
+                <div id = "titre" > 
+
+                <h2> Corentin GESSE--ENTRESSANGLE </h2> 
+
+                <h3> IUT Lyon 1 - Villeurbanne </h3> 
+                
+                </div> 
+                <img src = "images/langfr-800px-DL_02_BUT.png" alt = "cinq étoiles" > 
+
+                <cite> 
+                Formation très professionnalisante, sérieuse et familliale. Locaux propres en bon état. Planning un peu chargé. 
+                </cite> 
+
+            </div> 
             <!-------- Bas de page -------->
             <footer>
                 <div id="footer_texte"> 
