--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -41,9 +41,14 @@
                 </div> 
                 <img src = "images/langfr-800px-DL_02_BUT.png" alt = "cinq étoiles" > 
 
+                <div id = "contenu" > 
+                <img src = "images/guillemets-png-8-300x239.png" > 
+
                 <cite> 
                 Formation très professionnalisante, sérieuse et familliale. Locaux propres en bon état. Planning un peu chargé. 
-                </cite> 
+                </cite>  
+
+                </div> 
 
             </div> 
             <!-------- Bas de page -------->
