--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -28,6 +28,121 @@
             <!---- Contenu de la page (à changer en fonction de la page) ---->
             <div id="contenu_page_4">
                 <h1>Liste des IUT proposant la formation</h1>
+                <div id="liste_sites_iut">
+                    <div id="no1">
+                        <h2>IUT Lyon 1</h2>
+                        <div id="grey_square">
+                            <p>Site Villeurbanne Doua (69)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                                <p>- Administration, gestion et exploitation des données</p>
+                            </div>
+                            <p>Site Bourg-en-Bresse (01)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>Intégration d'applications et management du système d’information</p>
+                                <p>Réalisation d'applications : conception, développement, validation</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no2">
+                        <h2>IUT de Valence</h2>
+                        <div id="grey_square">
+                            <p>Site principal (26)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Administration, gestion et exploitation des données</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no3">
+                        <h2>IUT 2 de Grenoble</h2>
+                        <p>Site principal (38)</p>
+                        <div id="grey_square">
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no4">
+                        <h2>IUT Annecy</h2>
+                        <div id="grey_square">
+                            <p>Site principal (74)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Administration, gestion et exploitation des données</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no5">
+                        <h2>IUT Annecy</h2>
+                        <div id="grey_square">
+                            <p>Site principal (06)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                            </div>
+                            <p>Site Sophia Antipolis</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation <span class="bold">(en apprentissage)</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no6">
+                        <h2>IUT Aix-Marseille</h2>
+                        <div id="grey_square">
+                            <p>Site d'Aix-En-Provence (13)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                            </div>
+                            <p>Site d'Arles (13)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no7">
+                        <h2>IUT de Montpellier</h2>
+                        <div id="grey_square">
+                            <p>Site principal (34)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                                <p>- Développement, intégration d'applications et management du système d’information</p>
+                            </div>
+                            <p>Site de Sète (34)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                                <p>- Développement, intégration d'applications et management du système d’information</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="no8">
+                        <h2>IUT de Toulouse</h2>
+                        <div id="grey_square">
+                            <p>Site principal (74)</p>
+                            <div id="desc">
+                                <p>Parcours : </p>
+                                <p>- Réalisation d'applications : conception, développement, validation</p>
+                                <p>- Déploiement d'applications communicantes et sécurisées</p>
+                                <p>- Administration, gestion et exploitation des données</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-------- Bas de page -------->
             <footer>
