--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -31,6 +31,7 @@
             
             <p> Voici quelques témoignages d'étudiants de différents IUT. Les notes sont notés sur 5. </p> 
 
+            <div id = "contenu_page3" >  
             <div id = "personne1" > 
                 <div id = "titre" > 
 
@@ -45,12 +46,35 @@
                 <img src = "images/guillemets-png-8-300x239.png" > 
 
                 <cite> 
-                Formation très professionnalisante, sérieuse et familliale. Locaux propres en bon état. Planning un peu chargé. 
+                Formation très professionnalisante, sérieuse et familiale. Locaux propres en bon état. Planning un peu chargé. 
                 </cite>  
 
                 </div> 
 
             </div> 
+
+            <div id = "personne2" >  
+                <div id = "titre" > 
+
+                <h2> Corentin GESSE--ENTRESSANGLE </h2> 
+
+                <h3> IUT Lyon 1 - Villeurbanne </h3> 
+                
+                </div> 
+                <img src = "images/langfr-800px-DL_02_BUT.png" alt = "cinq étoiles" > 
+
+                <div id = "contenu" > 
+                <img src = "images/guillemets-png-8-300x239.png" > 
+
+                <cite> 
+                Formation très professionnalisante, sérieuse et familiale. Locaux propres en bon état. Planning un peu chargé. 
+                </cite>  
+
+                </div> 
+
+            </div> 
+
+            </div>
             <!-------- Bas de page -------->
             <footer>
                 <div id="footer_texte"> 
