--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -26,7 +26,7 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ---->
-            <div id="contenu_page_4">
+            <div id="contenu_page">
                 <h1>Liste des IUT proposant la formation</h1>
                 <div id="liste_sites_iut">
                     <div id="no1">
