--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -147,7 +147,7 @@
                                 <ul>
                                     <li>Réalisation d'applications : conception, développement, validation</li>
                                     <li>Déploiement d'applications communicantes et sécurisées</li>
-                                    <li>Développement, intégration d'applications et management du système d’information</li>
+                                    <li>Déploiement, intégration d'applications et management du système d’information</li>
                                 </ul>
                             </div>
                         </div>
