--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li><a href="page1_accueil.html">Accueil</a></li>
-                        <li><a href="page_qu'est_ce_que_le_but.html">Qu'est-ce que le BUT ?</a></li>
+                        <li><a href="page2_qu'est_ce_que_le_but.html">Qu'est-ce que le BUT ?</a></li>
                         <li><a href="#">Temoignages</a></li>
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
