--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -287,7 +287,7 @@
                     <div id="no18">
                         <h2>IUT du Havre</h2>
                         <div id="grey_square">
-                            <p>Site principal (Le Havre76)</p>
+                            <p>Site principal (Le Havre - 76)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
                                 <ul>
