--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -104,9 +104,9 @@
 
                     <tr> 
                         <td> Admissions </td> 
-                        <td> Bac général <div id = "plus" > +++ </div>, bac technologique <div id = "moyen" > ++ </div>, bac professionnel <div id = "peu" > + </div></td> 
-                        <td> Bac général <div id = "plus" > +++ </div>, bac technologique <div id = "moyen" > ++ </div>, bac professionnel <div id = "peu" > + </div></td> 
-                        <td> Bac général <div id = "moyen" > ++ </div>, bac technologique <div id = "plus" > +++ </div>, bac professionnel <div id = "peu" > + </div></td> 
+                        <td> Bac général <div id = "plus" > +++ </div>Bac technologique <div id = "moyen" > ++ </div>Bac professionnel <div id = "peu" > + </div></td> 
+                        <td> Bac général <div id = "plus" > +++ </div>Bac technologique <div id = "moyen" > ++ </div>Bac professionnel <div id = "peu" > + </div></td> 
+                        <td> Bac général <div id = "moyen" > ++ </div>Bac technologique <div id = "plus" > +++ </div>Bac professionnel <div id = "peu" > + </div></td> 
                     </tr>
 
                     <tr> 
@@ -124,15 +124,15 @@
                     
                         <td> 
                             <ul> 
-                                <li> concepteur et développeur d’applications ou de sites </li>
-                                <li> analyste programmeur </li> 
-                                <li> adjoint ou assistant ingénieur </li> 
-                                <li> administrateur de base de données ou de systèmes </li> 
-                                <li> technico-commercial </li> 
-                                <li> technicien de maintenance informatique et bureautique </li> 
-                                <li> chargé de production et d’exploitation de systèmes d’information </li> 
+                                <li> Concepteur et développeur d’applications ou de sites </li>
+                                <li> Analyste programmeur </li> 
+                                <li> Adjoint ou assistant ingénieur </li> 
+                                <li> Administrateur de base de données ou de systèmes </li> 
+                                <li> Technico-commercial </li> 
+                                <li> Technicien de maintenance informatique et bureautique </li> 
+                                <li> Chargé de production et d’exploitation de systèmes d’information </li> 
                                 <li> Webmestre </li> 
-                                <li> gestionnaire de parc informatique </li>
+                                <li> Gestionnaire de parc informatique </li>
                             </ul> 
                         </td> 
 
