--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -97,20 +97,28 @@
                     <form method = "post" action = "mailto:cocogesseentressangle@gmail.com"> 
 
                         <div id = "identite" > 
-                        <label for = "prenom" > Prénom : </label> 
+                        <label for = "prenom" > 
+                            <p> Prénom :</p> 
+                        </label> 
                         <input type = "text" id  = "prenom" placeholder = "Rose" required > 
 
-                        <label for = "nom" > Nom : </label> 
+                        <label for = "nom" > 
+                            <p>Nom :</p> 
+                        </label> 
                         <input type = "text" id = "nom" placeholder = "Martin" required > 
                     
                         </div> 
 
-                        <label for = "IUT" > ville de votre IUT : </label> 
+                        <label for = "IUT" > 
+                            <p>Commune de votre IUT :</p> 
+                        </label> 
                         <input type = "text" id = "IUT" placeholder = "Martin" required > 
 
                         <div id = "email" > 
 
-                        <label for = "e-mail" > E-mail : </label> 
+                        <label for = "e-mail" > 
+                            <p>E-mail :</p> 
+                        </label> 
                         <input type = "email" id = "e-mail" placeholder = "votreprenom.nom@domaine.fr" required > 
 
                         <label for = "sujet1" > Combien notez vous le BUT Informatique sur 5 </label> 
@@ -136,7 +144,9 @@
 
                         <div id = "message" > 
 
-                        <label for = "message" > Votre message : </label>
+                        <label for = "message" > 
+                            <p>Votre message :</p> 
+                        </label>
                         <textarea id = "message" name = "message" placeholder = "Message" required></textarea> 
                         </div> 
 
